# daisy-local

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile.build  LICENSE  README.md  SECURITY.md  THIRD-PARTY-LICENSES.txt  TRADEMARK.md  about.hbs  about.toml
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  test-build.yml
apps/frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
apps/frontend/public/fonts/: fonts.css
apps/frontend/src/: App.tsx  config-guards.test.ts  harden.ts  legalContent.ts  licenses.generated.ts  liveTranscript.test.ts  liveTranscript.ts  main.tsx  mini-window.css  nav-defs.test.ts  recordingsJob.ts  reminder-window.css  tauri.ts  ui-consistency.test.ts  useDraggable.ts
apps/frontend/test/: webkit-layout.mjs
crates/aec/: Cargo.toml
crates/aec/src/: constants.rs  echo_canceller.rs  error.rs  fft.rs  lib.rs  onnx.rs
crates/aec/tests/: benchmark.rs  fft_test.rs  numerical.rs  onnx_load_test.rs  reset_test.rs
crates/audio-engine/: Cargo.toml  build.rs
crates/audio-engine/examples/: wasapi_dual_probe.rs  wasapi_smoke.rs
crates/audio-engine/src/: autogain.rs  bt_profile.rs  capture.rs  correlation.rs  error.rs  gain.rs  lib.rs  manifest.rs  routing.rs  source.rs  sysgain.rs  virtual_sink.rs  wav.rs
crates/audio-engine/src/macos/: bridge.rs  mod.rs  resample.rs  shim.swift  source.rs
crates/audio-engine/src/windows/: mic.rs  mod.rs  source.rs  system.rs
crates/audio-engine/tests/: correlation_invariant.rs  correlation_test.rs  integration_test.rs  routing.rs  source_test.rs  streaming_lifecycle.rs  streaming_tees.rs  virtual_sink_test.rs  wav_roundtrip.rs  wpctl_smoke.rs
crates/audio-engine/tests/fixtures/: README.md
crates/daisy-cli/: Cargo.toml
crates/daisy-cli/tests/: aec_integration.rs  daisy_aec_smoke.rs
crates/denoise/: Cargo.toml
crates/denoise/examples/: probe_dfn.rs
crates/denoise/src/: lib.rs
crates/embeddings/: Cargo.toml
crates/embeddings/src/: lib.rs
crates/providers-http/: Cargo.toml
crates/providers-http/src/: error.rs  lib.rs  models.rs  orchestrator.rs
crates/providers-http/tests/: orchestrator_mock.rs
crates/providers-local/: Cargo.toml
crates/providers-local/examples/: bench.rs  whisper_text.rs
crates/providers-local/src/: bench.rs  download.rs  lib.rs  wav.rs
crates/providers-local/src/streaming/: agreement.rs  controller.rs  live_metrics.rs  mod.rs  transcriber.rs  window.rs
crates/providers-realtime/: Cargo.toml
crates/providers-realtime/src/: error.rs  event.rs  lib.rs
crates/providers-realtime/tests/: mock.rs
crates/recording/: Cargo.toml
crates/recording/examples/: live_aec_replay.rs
crates/recording/src/: audio_import.rs  compress.rs  error.rs  flight_recorder.rs  heartbeat.rs  inhibit.rs  lib.rs  live_pipeline.rs  live_transcript.rs  manifest.rs  manifest_ops.rs  mixdown.rs  recorder.rs  session.rs  speech_levels.rs  state.rs  worker.rs
crates/recording/tests/: compress.rs  crash_recovery.rs  denoise_stage.rs  heartbeat.rs  lifecycle.rs  live_transcript.rs  manifest_roundtrip.rs  mixdown.rs  segments.rs  session_layout.rs  state_machine.rs
crates/summarize/: Cargo.toml
crates/summarize/src/: anthropic.rs  chapters.rs  chat.rs  defaults.rs  engine.rs  error.rs  gateway.rs  hash.rs  lib.rs  model.rs  openai_compat.rs  polish.rs  prompt.rs  prompts.rs  render.rs  state_provider.rs
crates/summarize/tests/: anthropic_mock.rs  prompt_injection.rs  render.rs
crates/syncsafe/: Cargo.toml
crates/syncsafe/src/: lib.rs
crates/tauri-app/: Cargo.toml  Daisy.entitlements  Info.plist  build.rs  tauri.conf.json  tauri.macos.conf.json
crates/tauri-app/capabilities/: default.json
crates/tauri-app/icons/: icon.icns
crates/tauri-app/src/: bootstrap.rs  dev_offline.html  error.rs  hardware.rs  lib.rs  library_events.rs  logging.rs  machine_id.rs  main.rs  migrate_v3.rs  migrations.rs  mini_window.rs  openblas.rs  perf.rs  profile.rs  settings.rs  single_instance.rs  state.rs  telemetry.rs
crates/tauri-app/src/commands/: analysis.rs  bench.rs  binding.rs  bootstrap.rs  calendar.rs  chapters.rs  contacts.rs  files.rs  finalize.rs  gap_patch.rs  history.rs  integrations.rs  integrity.rs  library.rs  license.rs  lifecycle.rs  live_chat.rs  llm_stream.rs  llm_text.rs  meeting.rs  migrate.rs  mod.rs  pipeline.rs  playback.rs  prompts.rs  qa.rs  recording.rs  recordings.rs  search.rs  session.rs  settings.rs  summary.rs  tags.rs  transcribe_priming.rs  update.rs  voiceprints.rs  whisper_models.rs  workflow_engine.rs  workflow_history.rs  workflows.rs
crates/tauri-app/src/mcp/: mod.rs  protocol.rs  server.rs  token.rs  tools.rs
crates/tauri-app/tests/: bootstrap.rs  gap_patch_smoke.rs  library.rs  meeting_integration.rs  profile.rs  recording_commands.rs  recording_lifecycle.rs  search_integration.rs  settings.rs  summary_integration.rs  tags_integration.rs  vault_lifecycle.rs
crates/transcript/: Cargo.toml
crates/transcript/examples/: dup_probe.rs  echo_probe.rs
crates/transcript/src/: backchannel.rs  dedup.rs  echo_direction.rs  energy_gate.rs  error.rs  gap.rs  lib.rs  model.rs  promote.rs  render.rs  rms.rs  text.rs
crates/transcript/tests/: dedup.rs  render.rs  rms.rs  roundtrip.rs  text.rs
crates/vault/: Cargo.toml
crates/vault/src/: envelope.rs  error.rs  kdf.rs  lib.rs
crates/vault/tests/: auth_failure.rs  roundtrip.rs
crates/voiceprints/: Cargo.toml
crates/voiceprints/examples/: diag_diarize.rs  probe_diarize_mic.rs  probe_vp.rs  time_speakrs.rs
crates/voiceprints/src/: fbank.rs  lib.rs  speakrs_diar.rs
diagnostics/: README.md  denoise_diar_ab.rs
docs/: BUILDING.md  MCP.md  SECURITY.md
models/dtln-aec/: README.md  convert-from-upstream.sh
models/voiceprints/: download.ps1
scripts/: build-inside.sh  build-release-mac.sh  build-release.ps1  build-release.sh  download-embeddings.sh  download-voiceprints.sh  download-whisper.sh  gen-licenses.sh  repack-appimage.sh  setup-dev.sh
tools/live-stress/: README.md  bloat.ps1  stress.ps1
(+112 files in other folders)
