[package]
name = "providers-http"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
transcript = { path = "../transcript" }
syncsafe = { path = "../syncsafe" }
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
log.workspace = true
rayon.workspace = true

[dev-dependencies]
mockito.workspace = true
tempfile.workspace = true
hound.workspace = true
