[package]
name = "summarize"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
log.workspace = true
reqwest.workspace = true
sha2 = "0.10"
ed25519-dalek.workspace = true
base64.workspace = true
uuid.workspace = true

[dev-dependencies]
mockito.workspace = true
