[package]
name = "transcript"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
hound.workspace = true
rustfft.workspace = true

[dev-dependencies]
tempfile.workspace = true
