[package]
name = "vault"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
argon2.workspace = true
aes-gcm.workspace = true
rand.workspace = true
base64.workspace = true
zeroize.workspace = true
zxcvbn.workspace = true

[dev-dependencies]
base64.workspace = true
